--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@types/debounce": "^1.2.0",
     "@types/jest": "^26.0.9",
     "@types/node": "^14.0.27",
-    "@types/react": "^17.0.2",
+    "@types/react": "^16.14.0",
     "@types/react-modal": "^3.10.6",
     "@types/react-responsive": "^8.0.2",
     "bignumber.js": "^9.0.0",
@@ -19,7 +19,7 @@
     "node-sass": "4.14.1",
     "numeral": "^2.0.6",
     "prop-types": "^15.7.2",
-    "react": "^17.0.2",
+    "react": "^16.14.0",
     "react-circular-progressbar": "^2.0.3",
     "react-countdown": "^2.3.1",
     "react-countup": "^4.3.3",
@@ -46,7 +46,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build --legacy-peer-deps",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "deploy": "yarn build && cp ./build/index.html ./build/200.html && surge ./build sushiswap.org"
